[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "repo-indexer"
version = "0.1.0"
description = "Clone GitHub repos, build embeddings with OpenAI or SBERT, store in Chroma, and search."
readme = "README.md"
license = { text = "MIT" }
authors = [ { name="Your Name", email="you@example.com" } ]
dependencies = [
    "GitPython>=3.1",
    "langchain>=0.0.XXX",
    "sentence-transformers>=2.2.2",
    "chroma-db>=0.4.0",
]

[tool.setuptools.packages.find]
where = ["src"]
